--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.2.*",
         "predis/predis": "^1.0",
         "league/glide": "^1.0",
-        "league/glide-laravel": "^1.0"
+        "league/glide-laravel": "^1.0",
+        "milon/barcode": "^5.2",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
